--- a/brand1/html/editBrandGroup.html
+++ b/brand1/html/editBrandGroup.html
@@ -2,7 +2,7 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <title>品牌查询页面</title>
+    <title>品牌集新建页面</title>
     <link rel="stylesheet" href="../../bower_components/bootstrap/dist/css/bootstrap.css"/>
     <link rel="stylesheet" href="../../bower_components/pure/pure-min.css"/>
     <link rel="stylesheet" href="../styles/css/jquery_ui.datepicker-modify.css"/>
@@ -41,7 +41,7 @@
             <span class="query_title">新建品牌集</span>
             <span class="marginLR5">品牌集</span>
             <span class="pull-right marginR15">
-                <button type="button" class="btn btn-sm btn-default">返回</button>
+                <button type="button" class="btn btn-sm btn-default" onclick="window.location.href='index.html'">返回</button>
                 <button type="button" class="btn btn-sm btn-success">保存</button>
             </span>
         </div>
@@ -118,7 +118,7 @@
 
             <!--必填项 strart-->
             <div class="content_layout">
-                <span class="left text-danger">选填项</span>
+                <span class="left">选填项</span>
                 <div class="right">
                     <div class="form-group">
                         <label class="pure-u-1-8 control-label">旅行日期</label>
@@ -161,7 +161,7 @@
 
                     <div class="form-group">
                         <label class="pure-u-1-8 control-label">描述</label>
-                        <div class="pure-u-1-2">
+                        <div class="pure-u-1-3">
                             <textarea class="form-control" rows="3"></textarea>
                         </div>
 
