--- a/brand1/html/index.html
+++ b/brand1/html/index.html
@@ -81,7 +81,7 @@
 
 <div class="container-fluid main_content" id="main_content" >
     <div class="pull-right clearfix" style="margin-bottom: 8px">
-        <button type="button" class="btn btn-sm btn-success">新建品牌集</button>
+        <button type="button" class="btn btn-sm btn-success" onclick="window.location.href='editBrandGroup.html'">新建品牌集</button>
         <button class="btn btn-info btn-sm">发布</button>
         <button class="btn btn-warning btn-sm">截止</button>
         <button class="btn btn-danger btn-sm">删除</button>
@@ -102,7 +102,8 @@
                         </span>
                         <span class="right">
                             <i class="glyphicon glyphicon-pencil marginR10 myhand"></i>
-                            <i class="glyphicon glyphicon-plus text-success myhand"></i></span>
+                            <i class="glyphicon glyphicon-plus text-success myhand" onclick="window.location.href='editBrand.html'"></i>
+                        </span>
                         <span class="center">
                            <span>序列号：8776559</span>
                            <span class="marginL10">城市对：<span class="bold">1 → 2</span></span>
@@ -208,7 +209,8 @@
                         </span>
                         <span class="right">
                             <i class="glyphicon glyphicon-pencil marginR10 myhand"></i>
-                            <i class="glyphicon glyphicon-plus text-success myhand"></i></span>
+                            <i class="glyphicon glyphicon-plus text-success myhand" onclick="window.location.href='editBrand.html'"></i>
+                        </span>
                         <span class="center">
                            <span>序列号：8776559</span>
                            <span class="marginL10">城市对：<span class="bold">1 → 2</span></span>
