--- a/ocmoni6/html/s7Edit.html
+++ b/ocmoni6/html/s7Edit.html
@@ -76,7 +76,7 @@
                 <span class="serviceInputSpan right"></span>
             </div>
             <div class="content_layout">
-                <!-- 附加服务选择框-->
+                <!-- 附加服务选择框 start-->
                 <div class="service_choose_layout">
                     <s><i></i></s>
                     <div class="service_choose">
@@ -126,6 +126,7 @@
                         </div>
                     </div>
                 </div>
+                <!-- 附加服务选择框 end-->
             </div>
         </div>
 
