--- a/ocmoni6/html/s7Edit.html
+++ b/ocmoni6/html/s7Edit.html
@@ -73,7 +73,9 @@
             <div class="title_layout">
                 <span class="left">1.选择附加服务</span>
                 <span style="margin-right:40px;"></span>
-                <span class="serviceInputSpan right"></span>
+                <span class="serviceInputSpan"></span>
+                <i class ="glyphicon glyphicon-asterisk red"></i>
+                <span class ="gray">必须选择到最后一级</span>
             </div>
             <div class="content_layout">
                 <!-- 附加服务选择框 start-->
@@ -256,8 +258,8 @@
                                     </tbody>
                                 </table>
                                 <div class="table_footer">
-                                    <button class="btn btn-success btn-sm">增加一行</button>
-                                    <button class="btn btn-default btn-sm">删除一行</button>
+                                    <button type="button" class="btn btn-success btn-sm">增加一行</button>
+                                    <button type="button" class="btn btn-default btn-sm">删除一行</button>
                                 </div>
                             </div>
                         </div>
