--- a/brand1/jsp/editBrandGroup.jsp.html
+++ b/brand1/jsp/editBrandGroup.jsp.html
@@ -29,7 +29,7 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-9">
                 <ul class="nav navbar-nav">
-                    <li class="active"><a href="index.html">品牌服务</a></li>
+                    <li class="active"><a href="#">品牌服务</a></li>
                 </ul>
             </div><!-- /.navbar-collapse -->
         </div><!-- /.container-fluid -->
