--- a/brand1/html/editBrandGroup.html
+++ b/brand1/html/editBrandGroup.html
@@ -79,17 +79,43 @@
                         <div class="pure-u-1-8">
                             <input type="text"  class="form-control"  placeholder="范围">
                         </div>
+                        <label for="id2" class="glyphicon glyphicon-th iconfont_box"></label>
+                        <div class="pure-u-1-8">
+                            <input type="text"  class="form-control"  placeholder="范围">
+
+                        </div>
+                        <label for="id2" class="glyphicon glyphicon-th iconfont_box"></label>
+                    </div>
+
+                    <div class="form-group">
+                        <label class="pure-u-1-8 control-label">区域1</label>
+                        <div class="pure-u-1-8">
+                            <select name="loc1" class="form-control">
+                                <option value="">选择</option>
+                                <option value="A">A-大区</option>
+                                <option value="C">C-城市</option>
+                                <option value="N">N-国家</option>
+                                <option value="P">P-机场</option>
+                                <option value="S">S-州</option>
+                                <option value="Z">Z-区域</option>
+                            </select>
+                        </div>
                         <div class="pure-u-1-8">
                             <input type="text"  class="form-control"  placeholder="范围">
                         </div>
                     </div>
 
                     <div class="form-group">
-                        <label class="pure-u-1-8 control-label">区域1</label>
+                        <label class="pure-u-1-8 control-label">区域2</label>
                         <div class="pure-u-1-8">
-                            <select name="" class="form-control" >
+                            <select name="loc2" class="form-control">
                                 <option value="">选择</option>
-                                <option value="">1</option>
+                                <option value="A">A-大区</option>
+                                <option value="C">C-城市</option>
+                                <option value="N">N-国家</option>
+                                <option value="P">P-机场</option>
+                                <option value="S">S-州</option>
+                                <option value="Z">Z-区域</option>
                             </select>
                         </div>
                         <div class="pure-u-1-8">
@@ -144,16 +170,18 @@
                                     <tbody>
                                     <td>
                                         <select name="" class="common_input" style="width: 98%">
-                                            <option value="">选择</option>
-                                            <option value="">1</option>
+                                            <option value="" selected="selected">选择</option>
+                                            <option value="T">Travel Agency code</option>
+                                            <option value="I">IATA number</option>
+                                            <option value="V">Department Code</option>
                                         </select>
                                     </td>
                                     <td><input type="text" class="common_input" style="width: 98%"/></td>
                                     </tbody>
                                 </table>
                                 <div class="table_footer">
-                                    <button class="btn btn-success btn-sm">增加一行</button>
-                                    <button class="btn btn-default btn-sm">删除一行</button>
+                                    <button type="button" class="btn btn-success btn-sm">增加一行</button>
+                                    <button type="button" class="btn btn-default btn-sm">删除一行</button>
                                 </div>
                             </div>
                         </div>
