--- a/brand1/html/index.html
+++ b/brand1/html/index.html
@@ -96,12 +96,15 @@
                                 <i class="glyphicon glyphicon-upload marginL10" data-name="showHideBody"></i>
                                 asgui_catestssssssssssssssssssssssssss
                             </span>
-                            <i class="glyphicon glyphicon-info-sign pull-right descrImg" data-toggle="tooltip"
+                            <i class="glyphicon glyphicon-info-sign" data-toggle="tooltip"
                                data-placement="top"  title="Tooltip on top  hello world  这里是描述信息"></i>
                         </span>
                         <span class="right">
-                            <i class="glyphicon glyphicon-pencil marginR10 myhand"></i>
+                            <i class="glyphicon glyphicon-pencil marginR10 myhand" title="编辑品牌集"></i>
+                             <button type="button" class="btn btn-success btn-sm" onclick="window.location.href='editBrand.html'">新建品牌</button>
+                            <!--
                             <i class="glyphicon glyphicon-plus text-success myhand" onclick="window.location.href='editBrand.html'"></i>
+                            -->
                         </span>
                         <span class="center">
                            <span>序列号：8776559</span>
@@ -206,7 +209,7 @@
                         </span>
                         <span class="right">
                             <i class="glyphicon glyphicon-pencil marginR10 myhand"></i>
-                            <i class="glyphicon glyphicon-plus text-success myhand" onclick="window.location.href='editBrand.html'"></i>
+                            <button type="button" class="btn btn-success btn-sm" onclick="window.location.href='editBrand.html'">新建品牌</button>
                         </span>
                         <span class="center">
                            <span>序列号：8776559</span>
