--- a/brand1/html/editBrand.html
+++ b/brand1/html/editBrand.html
@@ -187,13 +187,19 @@
                                     </ul>
                                 </div>
                             </div>
-                            <div class="choose_box choose_box_right" style="width: 300px">
+                            <div class="choose_box choose_box_right" style="width: 310px">
                                 <div class="choose_box_title">
                                     <input type="text" class="form-control input-sm"  placeholder="选择服务分组" />
                                 </div>
                                 <div class="service_list">
                                     <ul>
-                                        <li class="choose4li">优选座位组描述F</li>
+                                        <li class="choose4li">
+                                            <span class="orange">[0DG]</span>
+                                            <span class="commercialName">UPTO50LB 23KG AND62LI 158LCM</span>
+                                            <span class="serviceType">F</span>
+                                            <span class="ssrCode">0B5E</span>
+                                            <span class="pull-right">价格</span>
+                                        </li>
                                         <li class="choose4li">1</li>
                                     </ul>
                                 </div>
@@ -201,7 +207,6 @@
                         </div>
                     </div>
                     <!-- 附加服务选择框 end-->
-
 
                    <div class="service_choose_toRight">
                         <i class="glyphicon glyphicon-arrow-right"></i>
@@ -211,13 +216,17 @@
                     <div class="service_choose_layout" style="margin-left: 0;">
                         <div class="title">已选服务</div>
                         <div class="service_choose" style="margin-top: 0px">
-                            <div class="choose_box choose_box_right">
+                            <div class="choose_box choose_box_right" style="width: 210px">
                                 <div class="choose_box_title">
                                     <span class="text-info">服务详细</span>
                                 </div>
                                 <div class="service_list" >
                                     <ul>
-                                        <li class="choose4li">优选座位组描述F</li>
+                                        <li class="choose4li">
+                                           <span class="commercialName">优选座位组描述</span>
+                                           <span class="serviceType">F</span>
+                                           <span style="padding-left: 3px">&times;</span>
+                                        </li>
                                         <li class="choose4li">1</li>
                                     </ul>
                                 </div>
